// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD_BOOKMARK_COLUMN_SUCCESS 1`] = `
Object {
  "public": Object {
    "ids": Array [],
    "nextUrl": null,
  },
}
`;

exports[`FETCH_SUCCESS 1`] = `
Object {
  "public": Object {
    "ids": Array [
      1,
      2,
      3,
    ],
  },
}
`;

exports[`FETCH_SUCCESS 2`] = `
Object {
  "private": Object {
    "ids": Array [
      1,
      2,
      3,
    ],
  },
}
`;

exports[`SET_NEXT_URL 1`] = `
Object {
  "public": Object {
    "nextUrl": "https://next.api.url",
  },
}
`;

exports[`SET_NEXT_URL 2`] = `
Object {
  "private": Object {
    "nextUrl": "https://next.api.url",
  },
}
`;

exports[`snapshot initialState 1`] = `Object {}`;
